Test: fixed regression test 005.jdbc to avoid Java 21 deprecation warnings.
Replace Runtime.exec(String) with Runtime.exec(String[]) to avoid Java 21 deprecation warnings.
Patch is created by Vladimir Petko and modified by Bo Peng.